@@ -15,6 +15,7 @@ documentation is organized alphabetically by module name.
    api/configuration
    api/events
    api/exceptions
+   api/httpexceptions
    api/i18n
    api/interfaces
    api/location
