@@ -1,5 +1,4 @@
-from webob.exc import HTTPFound
-
+from pyramid.httpexceptions import HTTPFound
 from pyramid.security import remember
 from pyramid.security import forget
 from pyramid.url import route_url
