@@ -1,6 +1,17 @@
 Next release
 ============
 
+Features (delta from BFG 1.3.X)
+-------------------------------
+
+- Add ``pyramid.httpexceptions`` module, which is a facade for the
+  ``webob.exc`` module.
+
+Documentation (delta from BFG 1.3)
+-----------------------------------
+
+- Added a ``pyramid.httpexceptions`` API documentation chapter.
+
 Backwards Incompatibilities (with BFG 1.3.X)
 --------------------------------------------
 
